--- a/basic-fantasy-rpg/app/views/listSpells.scala.html
+++ b/basic-fantasy-rpg/app/views/listSpells.scala.html
@@ -46,6 +46,9 @@
             @s.description
         </div>
         <div style="float: left; width: 100%; border: 1px solid #000000;">
+            <a href="http://localhost:9000/spells/create/">Edit Spell</a>
+        </div>
+        <div style="float: left; width: 100%; border: 1px solid #000000;">
             <hr>
         </div>
     }
