streamlining the repo/model/form/controller

--- a/basic-fantasy-rpg/app/views/spellUpdate.scala.html
+++ b/basic-fantasy-rpg/app/views/spellUpdate.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[SpellDto], postUrl: Call)(implicit request: MessagesRequestHeader)
+@(form: Form[Spell], postUrl: Call)(implicit request: MessagesRequestHeader)
 
 @main("Update a Spell") {
 <h1>Edit spell</h1>
