adding aligments to spells

--- a/basic-fantasy-rpg/app/views/spellCreate.scala.html
+++ b/basic-fantasy-rpg/app/views/spellCreate.scala.html
@@ -21,6 +21,7 @@
 @helper.inputText(form("magicUser"))
 @helper.inputText(form("duration"))
 @helper.textarea(form("description"))
+@helper.inputText(form("alignment"))
 
 <button>Create Spell</button>
 }
