--- a/basic-fantasy-rpg/app/views/spellsGet.scala.html
+++ b/basic-fantasy-rpg/app/views/spellsGet.scala.html
@@ -45,6 +45,12 @@
         <div style="float: left; width: 80%; border: 1px solid #000000;">
             @s.description
         </div>
+        <div style="float: left; width: 20%;">
+            Alignment:
+        </div>
+        <div style="float: left; width: 80%; border: 1px solid #000000;">
+            @s.alignment
+        </div>
         <div style="float: left; width: 100%; border: 1px solid #000000;">
             <a href="@updateUrl/@s._id.get.stringify">update</a>
         </div>
