--- a/basic-fantasy-rpg/app/views/spellUpdate.scala.html
+++ b/basic-fantasy-rpg/app/views/spellUpdate.scala.html
@@ -22,6 +22,7 @@
 @helper.inputText(form("magicUser"))
 @helper.inputText(form("duration"))
 @helper.textarea(form("description"))
+@helper.inputText(form("alignment"))
 
 <button>Update Spell</button>
 }
