calculating the spell book

--- a/basic-fantasy-rpg/app/views/characterSheet.scala.html
+++ b/basic-fantasy-rpg/app/views/characterSheet.scala.html
@@ -1,54 +1,17 @@
-@(spells: Seq[Spell])(implicit request: MessagesRequestHeader)
+@(spells: Map[Int, Seq[Spell]], baseSpellUrl: String)(implicit request: MessagesRequestHeader)
 
 @main("Character Sheet") {
-    <h1>TBD</h1>
+    <h1>Spell Book</h1>
 
-    @for(s <- spells) {
-        <div style="float: left; width: 20%; border: 1px solid #000000">
-            Name:
-        </div>
-        <div style="float: left; width: 80%; border: 1px solid #000000;">
-            @s.name
-        </div>
-        <div style="float: left; width: 20%; border: 1px solid #000000;">
-            Range:
-        </div>
-        <div style="float: left; width: 80%; border: 1px solid #000000;">
-            @s.range
-        </div>
-        <div style="float: left; width: 20%; border: 1px solid #000000;">
-            Cleric:
-        </div>
-        <div style="float: left; width: 80%; border: 1px solid #000000;">
-            @s.cleric.getOrElse("n/a")
-        </div>
-        <div style="float: left; width: 20%; border: 1px solid #000000;">
-            Magic User:
-        </div>
-        <div style="float: left; width: 80%; border: 1px solid #000000;">
-            @s.magicUser.getOrElse("n/a")
-        </div>
-        <div style="float: left; width: 20%; border: 1px solid #000000;">
-            Duration:
-        </div>
-        <div style="float: left; width: 80%; border: 1px solid #000000;">
-            @s.duration
-        </div>
-        <div style="float: left; width: 20%;">
-            Description:
-        </div>
-        <div style="float: left; width: 80%; border: 1px solid #000000;">
-            @s.description
-        </div>
-        <div style="float: left; width: 20%;">
-            Alignment:
-        </div>
-        <div style="float: left; width: 80%; border: 1px solid #000000;">
-            @s.alignment
-        </div>
-        <div style="float: left; width: 100%; border: 1px solid #000000;">
-            <hr>
-        </div>
+    @for(level <- spells.keys.toList.sorted) {
+        @for(s <- spells(level)) {
+            <div style="float: left; width: 20%; border: 1px solid #000000">
+                Level: @level
+            </div>
+            <div style="float: left; width: 80%; border: 1px solid #000000;">
+                <a href="@baseSpellUrl?name=@s.name"> @s.name</a>
+            </div>
+        }
     }
 
 }
