--- a/basic-fantasy-rpg/app/views/main.scala.html
+++ b/basic-fantasy-rpg/app/views/main.scala.html
@@ -11,9 +11,9 @@
     <head>
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/normalize.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fonts.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/foundation.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/styles.css")"/>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fonts.css")"/>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.ico")">
 
     </head>
