moving spells onto character sheet

--- a/basic-fantasy-rpg/app/views/characterSheet.scala.html
+++ b/basic-fantasy-rpg/app/views/characterSheet.scala.html
@@ -1,4 +1,8 @@
-@(spells: Map[Int, Seq[Spell]], baseSpellUrl: String)(implicit request: MessagesRequestHeader)
+@import basic.fantasy.characterclass.CharacterClasses._
+
+@(characterClass: CharacterClass,
+  spells: Map[Int,Seq[Spell]],
+  baseSpellUrl: String)(implicit request: MessagesRequestHeader)
 
 @main("Character Sheet") {
 <table class="callout">
@@ -300,146 +304,138 @@
 </div>
 <div class="large-12 medium-12 callout" style="break-after:page">
     <div class="grid-x grid-padding-x">
-        <div class="large-4 medium-4 cell" id="turn_undead_div">
-            <h5>Turning Undead</h5>
-            <div class="callout" id="turning">
-                <table class="unstriped">
-                    <tr>
-                        <td><strong>Skeletons:</strong></td>
-                        <td><span id="skeleton">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Zombie:</strong></td>
-                        <td><span id="zombie">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Ghoul:</strong></td>
-                        <td><span id="ghoul">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Wight:</strong></td>
-                        <td><span id="wight">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Wraith:</strong></td>
-                        <td><span id="wraith">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Mummy:</strong></td>
-                        <td><span id="mummy">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Spectre:</strong></td>
-                        <td><span id="spectre">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Vampire:</strong></td>
-                        <td><span id="vampire">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Ghost:</strong></td>
-                        <td><span id="ghost">0</span></td>
-                    </tr>
-                </table>
+        @if(characterClass.isCleric) {
+            <div class="large-4 medium-4 cell" id="turn_undead_div">
+                <h5>Turning Undead</h5>
+                <div class="callout" id="turning">
+                    <table class="unstriped">
+                        <tr>
+                            <td><strong>Skeletons:</strong></td>
+                            <td><span id="skeleton">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Zombie:</strong></td>
+                            <td><span id="zombie">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Ghoul:</strong></td>
+                            <td><span id="ghoul">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Wight:</strong></td>
+                            <td><span id="wight">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Wraith:</strong></td>
+                            <td><span id="wraith">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Mummy:</strong></td>
+                            <td><span id="mummy">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Spectre:</strong></td>
+                            <td><span id="spectre">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Vampire:</strong></td>
+                            <td><span id="vampire">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Ghost:</strong></td>
+                            <td><span id="ghost">0</span></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-        </div>
+        }
 
-        <div class="large-4 medium-4 cell" id="thief_skills_div">
-            <h5>Thief Skills</h5>
-            <div class="callout" id="thief_skills">
-                <table class="unstriped">
-                    <tr>
-                        <td><strong>Open Locks:</strong></td>
-                        <td><span id="openLocks">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Remove Traps:</strong></td>
-                        <td><span id="removeTraps">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Pick Pockets:</strong></td>
-                        <td><span id="pickPockets">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Move Silently:</strong></td>
-                        <td><span id="moveSilently">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Climb Walls:</strong></td>
-                        <td><span id="climbWalls">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Hide:</strong></td>
-                        <td><span id="hide">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Listen:</strong></td>
-                        <td><span id="listen">0</span></td>
-                    </tr>
-                </table>
+        @if(characterClass.isThief) {
+            <div class="large-4 medium-4 cell" id="thief_skills_div">
+                <h5>Thief Skills</h5>
+                <div class="callout" id="thief_skills">
+                    <table class="unstriped">
+                        <tr>
+                            <td><strong>Open Locks:</strong></td>
+                            <td><span id="openLocks">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Remove Traps:</strong></td>
+                            <td><span id="removeTraps">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Pick Pockets:</strong></td>
+                            <td><span id="pickPockets">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Move Silently:</strong></td>
+                            <td><span id="moveSilently">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Climb Walls:</strong></td>
+                            <td><span id="climbWalls">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Hide:</strong></td>
+                            <td><span id="hide">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Listen:</strong></td>
+                            <td><span id="listen">0</span></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-        </div>
+        }
 
-        <div class="large-4 medium-4 cell" id="monk_skills_div">
-            <h5>Monk Skills</h5>
-            <div class="callout" id="monk_skills">
-                <table class="unstriped">
-                    <tr>
-                        <td><strong>Move Silently:</strong></td>
-                        <td><span id="monkMoveSilently">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Climb Walls:</strong></td>
-                        <td><span id="monkClimbWalls">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Hide:</strong></td>
-                        <td><span id="monkHide">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Listen:</strong></td>
-                        <td><span id="monkListen">0</span></td>
-                    </tr>
-                </table>
+        @if(characterClass.isMonk) {
+            <div class="large-4 medium-4 cell" id="monk_skills_div">
+                <h5>Monk Skills</h5>
+                <div class="callout" id="monk_skills">
+                    <table class="unstriped">
+                        <tr>
+                            <td><strong>Move Silently:</strong></td>
+                            <td><span id="monkMoveSilently">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Climb Walls:</strong></td>
+                            <td><span id="monkClimbWalls">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Hide:</strong></td>
+                            <td><span id="monkHide">0</span></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Listen:</strong></td>
+                            <td><span id="monkListen">0</span></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-        </div>
+        }
 
-        <div class="large-4 medium-4 cell" id="caster_spells_div">
-            <h5>Spells per Level</h5>
-            <div class="callout" id="spells_list">
-                <table class="unstriped">
-                    <tr>
-                        <td><strong>First Level:</strong></td>
-                        <td><span id="first_level">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Second Level:</strong></td>
-                        <td><span id="second_level">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Third Level:</strong></td>
-                        <td><span id="third_level">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Fourth Level:</strong></td>
-                        <td><span id="fourth_level">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Fifth Level:</strong></td>
-                        <td><span id="fifth_level">0</span></td>
-                    </tr>
-                    <tr>
-                        <td><strong>Sixth Level:</strong></td>
-                        <td><span id="sixth_level">0</span></td>
-                    </tr>
-                </table>
+        @if(characterClass.isSpellCaster) {
+            <div class="large-4 medium-4 cell" id="caster_spells_div">
+                <h5>Memorized Spells</h5>
+                @for(level <- spells.keys.toList.sorted) {
+                    @for(s <- spells(level)) {
+                    <div style="float: left; width: 20%; border: 1px solid #000000">
+                        Level: @level
+                    </div>
+                    <div style="float: left; width: 80%; border: 1px solid #000000;">
+                        <a href="@baseSpellUrl?name=@s.name"> @s.name</a>
+                    </div>
+                    }
+                }
             </div>
-        </div>
+        }
 
-        <div class="large-4 medium-4 cell" id="monk_powers_div">
-            <h5>Monk Powers</h5>
-            <textarea id="monk_powers" style="height: 290px;"></textarea>
-        </div>
+        @if(characterClass.isMonk) {
+            <div class="large-4 medium-4 cell" id="monk_powers_div">
+                <h5>Monk Powers</h5>
+                <textarea id="monk_powers" style="height: 290px;"></textarea>
+            </div>
+        }
     </div>
 </div>
 
@@ -481,21 +477,5 @@
         </div>
     </div>
 </div>
-
-
-
-
-    <h1>Spell Book</h1>
-
-    @for(level <- spells.keys.toList.sorted) {
-        @for(s <- spells(level)) {
-            <div style="float: left; width: 20%; border: 1px solid #000000">
-                Level: @level
-            </div>
-            <div style="float: left; width: 80%; border: 1px solid #000000;">
-                <a href="@baseSpellUrl?name=@s.name"> @s.name</a>
-            </div>
-        }
-    }
 
 }
