--- a/basic-fantasy-rpg/app/views/characterSheetCreate.scala.html
+++ b/basic-fantasy-rpg/app/views/characterSheetCreate.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[CharacterSheet], postUrl: Call, getRandomName: Call)(implicit request: MessagesRequestHeader)
+@(form: Form[CharacterSheet], apiRoutes: Map[String, Call])(implicit request: MessagesRequestHeader)
 
 @main("Create a new Character") {
     <h1>Make a new Character</h1>
@@ -12,7 +12,7 @@
         }
     }
 
-    @helper.form(getRandomName) {
+    @helper.form(apiRoutes("getRandomName")) {
         @helper.CSRF.formField
         <table class="callout">
             <tr>
@@ -25,4 +25,15 @@
             </tr>
         </table>
     }
+
+    @helper.form(apiRoutes("getRandomAttributes")) {
+        @helper.CSRF.formField
+        <div class="grid-x grid-padding-x callout">
+          <div class="large-4 medium-4 cell">
+            @helper.inputText(form("race"))
+          </div>
+          <input type="submit" class="button noprint" id="roll_ability_scores" value="Roll Scores" />
+        </div>
+    }
+
 }
