--- a/scala-play/app/views/spellsGet.scala.html
+++ b/scala-play/app/views/spellsGet.scala.html
@@ -39,13 +39,13 @@
         <div style="float: left; width: 80%; border: 1px solid #000000;">
             @s.duration
         </div>
-        <div style="float: left; width: 20%;">
+        <div style="float: left; width: 20%; border: 1px solid #000000;">
             Description:
         </div>
         <div style="float: left; width: 80%; border: 1px solid #000000;">
             @s.description
         </div>
-        <div style="float: left; width: 20%;">
+        <div style="float: left; width: 20%; border: 1px solid #000000;">
             Alignment:
         </div>
         <div style="float: left; width: 80%; border: 1px solid #000000;">
